# brass

./: .gitignore  Cargo.toml  README.md  run_examples.sh
.github/workflows/: book.yaml  release.yaml
book/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
book/playground/: .gitignore  index.html  package.json  pnpm-lock.yaml
book/src/: SUMMARY.md  chapter_2.md  chapter_4.md  collections.md  concurrency.md  control-flow.md  functions.md  hello.md  interpreter.md  introduction.md  io.md  llm.md  lsp.md  modules.md  null-and-result.md  null-result.md  pattern-matching.md  reflection.md  types.md
bootstrap/src/: llvm.rs  main.rs
core/: string.cz
crates/brass_cache/: Cargo.toml
crates/brass_driver/: Cargo.toml
crates/brass_engine/: Cargo.toml
crates/brass_engine/src/: codegen.rs  lib.rs  mir_infer.rs  runtime.rs
crates/brass_engine/src/mono/: closure.rs  mod.rs  rules.rs  scan.rs
crates/brass_engine/tests/: view_collapse.rs
crates/brass_formatter/: Cargo.toml
crates/brass_hir/: Cargo.toml
crates/brass_jit_llvm/: Cargo.toml
crates/brass_language_server/: Cargo.toml
crates/brass_metadata/: Cargo.toml
crates/brass_mir/: Cargo.toml
crates/brass_parser/: Cargo.toml
crates/brass_repl/: Cargo.toml
crates/brass_resolve/: Cargo.toml  build.rs
crates/brass_runtime/: Cargo.toml
crates/brass_solver/: Cargo.toml
crates/brass_typeck/: Cargo.toml
crates/brass_typesys/: Cargo.toml
crates/prepoly_driver/: Cargo.toml
crates/prepoly_formatter/: Cargo.toml
crates/prepoly_language_server/: Cargo.toml
crates/prepoly_plugin/: Cargo.toml
crates/prepoly_plugin_host/: Cargo.toml
crates/prepoly_plugin_host/src/: lib.rs
crates/prepoly_plugin_host/tests/: load_and_call.rs
crates/prepoly_plugin_testlib/: Cargo.toml
crates/prepoly_plugin_testlib/src/: lib.rs
crates/prepoly_repl/: Cargo.toml
crates/prepoly_repl/src/: format.rs  interp.rs  lib.rs
crates/prepoly_resolve/: Cargo.toml  build.rs
crates/prepoly_resolve/src/: lib.rs  loader.rs  module.rs  plugin.rs  qualified.rs
crates/prepoly_resolve/tests/: plugin_module.rs
crates/prepoly_runtime/: Cargo.toml
crates/prepoly_runtime/src/: alloc.rs  builtins.rs  conc.rs  gc.rs  io.rs  lib.rs  net.rs  plugin.rs  region.rs  rt.rs  tls.rs
e2e_tests/array/: inferred_nullable_array.out  push_self_concrete_rejected.cz  push_self_concrete_rejected.err  push_self_rejected.cz
e2e_tests/closure/: block_body_missing_return_rejected.err  forwarded_closure.out  function_as_value-issue-1.out
e2e_tests/collections/: hashmap.pp  hashmap_get_or_default_mismatch.cz  hashmap_int64_values.cz  hashmap_key_mismatch.pp  hashmap_open_receiver_mismatch.cz  hashmap_refined_annotation.cz  hashmap_refinement.cz  hashmap_refinement.pp  hashmap_tombstone_reuse.pp  hashmap_two_instances.cz  hashmap_value_mismatch.cz  hashmap_value_mismatch.err  hashmap_value_mismatch.pp  map_to_map_fallible.cz  map_to_map_fallible.out  pairs_destructuring.cz  pairs_destructuring.out  pinned_map_literal_in_method.cz  recursive_map_builder.cz  recursive_map_builder.out
e2e_tests/concurrency/: region_escape_global.err
e2e_tests/control_flow/: condition_truthiness.out  mutual_recursion.out  null_condition_dead_arm.out
e2e_tests/env/: args.cz  args.pp  environment.cz  environment.pp  unset_variable.cz  unset_variable.err  unset_variable.pp
e2e_tests/field/: struct_fields.out
e2e_tests/fs/: directories.cz  directories.out  directories.pp  file_operations.cz  file_operations.out  file_operations.pp  path_arguments.cz  path_arguments.out  path_arguments.pp  read_after_close.cz  read_after_close.out  read_file_direct.cz  read_missing_file.cz  read_missing_file.out  seek_and_size.cz  size_without_path.cz  size_without_path.out  spawn_write.cz  tree_operations.cz  tree_operations.out  tree_operations.pp
e2e_tests/hash/: digests.cz  finalized_hasher.cz
e2e_tests/http/: fetch_error.cz  serialize.cz  serialize.out
e2e_tests/io/: read_file_direct.pp
e2e_tests/json/: hashmap_alongside_json.cz  parse_decode_stringify.cz  parse_decode_stringify.out  parse_decode_stringify.pp
e2e_tests/lazy/: deferred_chain_int64.cz  deferred_chain_int64.err  deferred_chain_int64.out
e2e_tests/modules/: hijacklib.pp  library_name_needs_import.cz  library_name_needs_import.err  nested_std_needs_import.err  nested_std_needs_import.pp  personlib.cz  personlib.pp  qualified_sum_direct.err  qualified_variant.out  qualified_variant_pattern.out  rename_decl_collision.err  renamelib.pp  renametylib.pp  shapelib.pp  structural_unimported_type_rejected.err  veclib.pp
e2e_tests/mutability/: infer_rebind_rejected.err  mut_param.out
e2e_tests/net/: spawn_client.cz  spawn_client.out  spawn_client.pp  spawn_many_clients.cz  spawn_tls_error.cz  spawn_udp_pingpong.cz  tcp_echo.cz  tcp_echo.out  tcp_echo.pp  tls_connect_error.cz  tls_connect_error.out  tls_connect_error.pp  udp_datagram.cz  udp_datagram.out  udp_datagram.pp  use_after_close.cz  use_after_close.out
e2e_tests/path/: filesystem.cz  package_manifest.cz  pure.cz
e2e_tests/process/: captured_output.cz  echo_pipe.cz  echo_pipe.out  echo_pipe.pp  env_vars.cz  env_vars.out  exit_code.cz  exit_code.out  exit_code.pp  exit_code_failure.cz  exit_code_failure.err  exit_code_zero.cz  exit_code_zero.out  stdin_pipe.cz  stdin_pipe.out  stdin_pipe.pp  wait_and_streams.cz
examples/: 10_strings_and_conversions.pp  12_concurrency.pp  13_file_io.cz  16_method_inference.pp  18_ufcs.pp
libraries/: build.sh  env.pp  fs.pp  http.pp  process.pp  regex.pp  semver.pp  url.pp
libraries/env/: Cargo.toml
libraries/env/src/: lib.rs
libraries/process/: Cargo.toml
libraries/process/src/: lib.rs
perf_tests/: README.md  gen_cases.py  run.sh
scripts/: install.sh  pack.sh
std/: array.pp  assert.pp  build.sh  collections.pp  conv.pp  env.cz  fs.cz  hash.cz  http.cz  io.pp  net.cz  net.pp  path.cz  process.cz  regex.cz  semver.cz  string.pp  url.cz
std/data/: json.cz  (+2 more)
std/env/: Cargo.toml
std/env/src/: lib.rs
std/fs/: Cargo.toml
std/fs/src/: lib.rs
std/path/: Cargo.toml
std/path/src/: lib.rs
(+363 files in other folders)
