[package]
name = "brass_engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fxhash.workspace = true
brass_parser.workspace = true
brass_hir.workspace = true
brass_typesys.workspace = true
brass_mir.workspace = true
brass_solver.workspace = true
tracing.workspace = true
brass_utils.workspace = true

[dev-dependencies]
brass_typeck.workspace = true
