[package]
name = "prepoly_repl"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prepoly_parser.workspace = true
prepoly_hir.workspace = true
prepoly_mir.workspace = true
prepoly_engine.workspace = true
# The driver-published program argument vector the `_argv` builtin answers with.
prepoly_utils.workspace = true
# Native-plugin dispatch; self-stubbing on wasm, where the interpreter
# reports plugin calls as unsupported.
prepoly_plugin_host.workspace = true
