# The path library's native half: a brass plugin (cdylib) loaded by
# `std/path.cz`. Build and install it with `std/build.sh`, which
# places the cdylib next to this manifest as `path.<dll suffix>`.
[package]
name = "brass_lib_path"
description = "brass plugin: filesystem queries behind the Path type"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# The cdylib is installed as `std/libpath.so`, and the wrapper
# module imports it by that file name (`import libpath.{ .. }`).
name = "path"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
brass_plugin = { workspace = true }
